objects/ccpt__External_Template__c.object
<CustomObject>
    <fields>
        <fullName>ccpt__Content_Components__c</fullName>
        <description>A json string containing the different components found in this template&apos;s content section.</description>
        <label>Content Components</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ccpt__Content_Styling__c</fullName>
        <description>A json string representing how the content of this template should be formatted.</description>
        <label>Content Styling</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ccpt__Html_Footer__c</fullName>
        <description>Contains the html code for this template&apos;s footer.</description>
        <label>Html Footer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ccpt__Html_Header__c</fullName>
        <description>Contains the html code for this template&apos;s header.</description>
        <label>Html Header</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>